pruebaFinal/force-app/main/default/objects/Opportunity/fields/Antiguedad_Laboral_en_Meses__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad_Laboral_en_Meses__c</fullName>
    <label>Antigüedad Laboral en Meses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>