pruebaFinal/force-app/main/default/objects/Opportunity/fields/Cliente_Apto__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Apto__c</fullName>
    <label>Cliente Apto</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>