pruebaFinal/force-app/main/default/objects/Opportunity/fields/Contrato_Cargado__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Cargado__c</fullName>
    <label>Contrato Cargado</label>
    <length>18</length>
    <type>Text</type>
</CustomField>