pruebaFinal/force-app/main/default/objects/Opportunity/fields/Disponibilidad_de_retiro__c.field-meta.xml
<CustomField>
    <fullName>Disponibilidad_de_retiro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Condición de uso en cajeros, heredada del Lead.</description>
    <inlineHelpText>Condición de uso en cajeros, heredada del Lead.</inlineHelpText>
    <label>Disponibilidad de retiro</label>
    <type>Checkbox</type>
</CustomField>