pruebaFinal/force-app/main/default/objects/Opportunity/fields/Doc_Boleta_Pago__c.field-meta.xml
<CustomField>
    <fullName>Doc_Boleta_Pago__c</fullName>
    <label>Doc Boleta Pago</label>
    <length>18</length>
    <type>Text</type>
</CustomField>