pruebaFinal/force-app/main/default/objects/Opportunity/fields/Doc_PDT__c.field-meta.xml
<CustomField>
    <fullName>Doc_PDT__c</fullName>
    <label>Doc PDT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>