pruebaFinal/force-app/main/default/objects/Opportunity/fields/Doc_Recibo_Honorarios__c.field-meta.xml
<CustomField>
    <fullName>Doc_Recibo_Honorarios__c</fullName>
    <label>Doc Recibo Honorarios</label>
    <length>18</length>
    <type>Text</type>
</CustomField>