pruebaFinal/force-app/main/default/objects/Opportunity/fields/Doc_Reporte_Tributario__c.field-meta.xml
<CustomField>
    <fullName>Doc_Reporte_Tributario__c</fullName>
    <label>Doc Reporte Tributario</label>
    <length>18</length>
    <type>Text</type>
</CustomField>