pruebaFinal/force-app/main/default/objects/Opportunity/fields/Fecha_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_pago__c</fullName>
    <label>Fecha de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>