pruebaFinal/force-app/main/default/objects/Opportunity/fields/Ingreso_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Ingreso_Mensual__c</fullName>
    <label>Ingreso Mensual</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>