pruebaFinal/force-app/main/default/objects/Opportunity/fields/Linea_de_Credito_Aprobada__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Credito_Aprobada__c</fullName>
    <label>Línea de Crédito Aprobada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>