pruebaFinal/force-app/main/default/objects/Opportunity/fields/Linea_de_credito_solicitada__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_credito_solicitada__c</fullName>
    <label>Línea de crédito solicitada</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>