pruebaFinal/force-app/main/default/objects/Opportunity/fields/Modificado_por_LWC__c.field-meta.xml
<CustomField>
    <fullName>Modificado_por_LWC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modificado_por_LWC</label>
    <type>Checkbox</type>
</CustomField>