pruebaFinal/force-app/main/default/objects/Opportunity/fields/Score_Crediticio_Butro__c.field-meta.xml
<CustomField>
    <fullName>Score_Crediticio_Butro__c</fullName>
    <label>Score Crediticio Butro</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>