pruebaFinal/force-app/main/default/objects/Opportunity/fields/Segmento_de_tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Segmento_de_tarjeta__c</fullName>
    <label>Segmento de tarjeta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_tarjeta__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>segmentoDeTarjeta</valueSetName>
    </valueSet>
</CustomField>