pruebaFinal/force-app/main/default/objects/Opportunity/fields/Situacion_laboral__c.field-meta.xml
<CustomField>
    <fullName>Situacion_laboral__c</fullName>
    <label>Situación laboral</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>situacionLaboralAccount</valueSetName>
    </valueSet>
</CustomField>