pruebaFinal/force-app/main/default/objects/Opportunity/fields/Tipo_de_tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_tarjeta__c</fullName>
    <label>Tipo de tarjeta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tipoDeTarjeta</valueSetName>
    </valueSet>
</CustomField>