pruebaFinal/force-app/main/default/objects/Opportunity/validationRules/Antiguedad_Laboral_Mayor_A_Cero.validationRule-meta.xml
<ValidationRule>
    <fullName>Antiguedad_Laboral_Mayor_A_Cero</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Antiguedad_Laboral_en_Meses__c)),
    Antiguedad_Laboral_en_Meses__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Antiguedad_Laboral_en_Meses__c</errorDisplayField>
    <errorMessage>La Antigüedad Laboral debe ser mayor a 0 meses.</errorMessage>
</ValidationRule>