pruebaFinal/force-app/main/default/objects/Opportunity/validationRules/Bloqueo_Oportunidad_Cerrada.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueo_Oportunidad_Cerrada</fullName>
    <active>true</active>
    <description>Se bloque la edición de la oportunidad una vez cerrado.</description>
    <errorConditionFormula>AND(
    $Profile.Name != &quot;System Administrator&quot;,
    PRIORVALUE(IsClosed) = True
)</errorConditionFormula>
    <errorMessage>Se bloque la edición de campos en la oportunidad. Contactar System Administrator para ediciones.</errorMessage>
</ValidationRule>