pruebaFinal/force-app/main/default/objects/Opportunity/validationRules/Bloqueo_Transicion_Assesment.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueo_Transicion_Assesment</fullName>
    <active>true</active>
    <description>Si la oportunidad estaba en &apos;Assesment&apos; y el usuario intenta cambiar la etapa, lanza un error si la nueva etapa elegida NO es &apos;Approval</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    TEXT(PRIORVALUE(StageName)) = &quot;Assesment&quot;,
    TEXT(StageName) != &quot;Approval&quot;
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Desde la etapa &apos;Assesment&apos;, la Oportunidad solo puede avanzar a la etapa de &apos;Approval&apos;.</errorMessage>
</ValidationRule>