pruebaFinal/force-app/main/default/objects/Opportunity/validationRules/Bloqueo_Transicion_Mayor_3000.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueo_Transicion_Mayor_3000</fullName>
    <active>true</active>
    <description>Si el usuario está cambiando la Etapa, la línea es mayor o igual a 3000, y la etapa anterior era &apos;Open&apos;, lanza un error si la nueva etapa NO es &apos;Assesment</description>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    Linea_de_credito_solicitada__c &gt;= 3000,
    TEXT(PRIORVALUE(StageName)) = &quot;Open&quot;,
    TEXT(StageName) != &quot;Assesment&quot;
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Para líneas de crédito de $3,000 o más, la Oportunidad debe avanzar de &apos;Open&apos; directamente a &apos;Assesment&apos;.</errorMessage>
</ValidationRule>