pruebaFinal/force-app/main/default/objects/Opportunity/validationRules/Bloqueo_Transicion_Menor_3000.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloqueo_Transicion_Menor_3000</fullName>
    <active>true</active>
    <description>Si la línea solicitada es menor a 3000 y alguien intenta cambiar la Etapa, lanza un error A MENOS QUE la etapa anterior fuera &apos;Open&apos; y la nueva etapa sea &apos;Contract</description>
    <errorConditionFormula>AND(
    Linea_de_credito_solicitada__c &lt; 3000,
    ISCHANGED(StageName),
    TEXT(PRIORVALUE(StageName)) = &quot;Open&quot;,
    TEXT(StageName) != &quot;Contract&quot;
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Para líneas de crédito menores a $3,000, la Oportunidad solo puede avanzar de &apos;Open&apos; directamente a &apos;Contract&apos;. No se permiten otros cambios de etapa.</errorMessage>
</ValidationRule>