pruebaFinal/force-app/main/default/objects/Opportunity/validationRules/Cliente_Apto_No_Updated.validationRule-meta.xml
<ValidationRule>
    <fullName>Cliente_Apto_No_Updated</fullName>
    <active>true</active>
    <description>No se puede editar el campo Cliente Apto</description>
    <errorConditionFormula>ISCHANGED(Cliente_Apto__c)</errorConditionFormula>
    <errorDisplayField>Cliente_Apto__c</errorDisplayField>
    <errorMessage>No se puede editar el Cliente Apto, este valor se calcula desde el Lead</errorMessage>
</ValidationRule>