pruebaFinal/force-app/main/default/objects/Opportunity/validationRules/Linea_Aprobada_Mayor_A_Cero.validationRule-meta.xml
<ValidationRule>
    <fullName>Linea_Aprobada_Mayor_A_Cero</fullName>
    <active>true</active>
    <errorConditionFormula>Linea_de_Credito_Aprobada__c &lt;= 0</errorConditionFormula>
    <errorMessage>La Línea de Crédito Aprobada debe ser un monto mayor a 0.</errorMessage>
</ValidationRule>