pruebaFinal/force-app/main/default/objects/Opportunity/validationRules/Rango_Score_Crediticio.validationRule-meta.xml
<ValidationRule>
    <fullName>Rango_Score_Crediticio</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Score_Crediticio_Butro__c &lt; 0,
    Score_Crediticio_Butro__c &gt; 10
)</errorConditionFormula>
    <errorDisplayField>Score_Crediticio_Butro__c</errorDisplayField>
    <errorMessage>El Score Crediticio debe ser un número entre 0 y 10.</errorMessage>
</ValidationRule>