pruebaFinal/force-app/main/default/objects/Opportunity/validationRules/Validacion_Descripcion_En_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Descripcion_En_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    TEXT(PRIORVALUE(StageName)) = &quot;Approval&quot;,
    TEXT(StageName) = &quot;Contract&quot;,
    ISBLANK(Description)
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Debes completar el campo &apos;Descripción&apos; con los detalles del acuerdo antes de pasar la Oportunidad a la etapa de Contract.</errorMessage>
</ValidationRule>