pruebaFinal/force-app/main/default/objects/Opportunity/validationRules/Validacion_Transicion_A_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Validacion_Transicion_A_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(StageName),
    TEXT(StageName) = &quot;Approval&quot;,
    OR(
        ISBLANK(Antiguedad_Laboral_en_Meses__c),
        Antiguedad_Laboral_en_Meses__c &lt; 6,
        
        ISBLANK(Linea_de_Credito_Aprobada__c),
        Linea_de_Credito_Aprobada__c &lt; Linea_de_credito_solicitada__c,
        
        ISBLANK(Score_Crediticio_Butro__c),
        Score_Crediticio_Butro__c &lt; 5,
        
        ISBLANK(Doc_Boleta_Pago__c),
        ISBLANK(Doc_Recibo_Honorarios__c),
        ISBLANK(Doc_PDT__c),
        ISBLANK(Doc_Reporte_Tributario__c)
    )
)</errorConditionFormula>
    <errorMessage>Para pasar a la etapa &apos;Approval&apos;, debes completar: Antigüedad min. 6 meses, Línea aprobada mayor a línea solicitada, Score min. 5 y tener cargados los 4 sustentos de ingresos.</errorMessage>
</ValidationRule>