pruebaFinal/force-app/main/default/objects/Opportunity/validationRules/Validar_Montos_Positivos.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Montos_Positivos</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Ingreso_Mensual__c &lt;= 0,
    Linea_de_Credito_Aprobada__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Tanto el ingreso mensual como la línea de crédito deben ser mayores a cero.</errorMessage>
</ValidationRule>